fix: unnecessary vertical scroll

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 			<h1 class="display-4">
 				LET'S CONNECT!
 			</h1>
-			<div class="d-flex row align-items-center justify-content-center social flex-sm-wrap">
+			<div class="d-flex align-items-center justify-content-center social flex-sm-wrap">
 				<a href="https://twitter.com/70r65eL" class="fab fa-twitter fa-2x _twitter" target="_blank"></a>
 
 				<a href="https://codepen.io/jeelpatel" class="fab fa-codepen fa-2x _codepen" target="_blank"></a>
